--- a/index.html
+++ b/index.html
@@ -83,7 +83,19 @@
 
     <h1>Calculadora Simples de Juros Compostos</h1>
     <h2>Insira seus dados e veja quanto seu investimento pode render!</h2>
-
+   <!-- Banner Centralizado -->
+    <div id="banner">
+        <script type="text/javascript">
+	atOptions = {
+		'key' : 'fa6ee3be9658b0fa7e0078a4857e8212',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/fa6ee3be9658b0fa7e0078a4857e8212/invoke.js"></script>
+    </div>
     <form id="form">
         <label for="valorInicial">Valor Inicial (R$):</label>
         <input type="text" id="valorInicial" required>
@@ -129,6 +141,10 @@
     </div>
 
     <footer>
+        <!-- Banner centralizado acima da descrição de direitos reservados -->
+    <div style="text-align: center; margin-bottom: 20px;">
+       <script async="async" data-cfasync="false" src="//pl24889075.profitablecpmrate.com/7a96ba0771bd08ef722d94c49ba25858/invoke.js"></script>
+<div id="container-7a96ba0771bd08ef722d94c49ba25858"></div>
         © 2024 Gabriel Alcantara. Todos os direitos reservados.<br>
         Este site e seu conteúdo são propriedade de Gabriel Alcantara. Nenhuma parte deste site pode ser reproduzida, distribuída, ou utilizada sem permissão expressa.<br>
         Conecte-se comigo no <a href="https://www.linkedin.com/in/gabrielfaa/" target="_blank" style="color: #fff;">LinkedIn</a> ou e-mail: <a href="mailto:agudaarte@gmail.com" style="color: #fff;">agudaarte@gmail.com</a>.
